--- a/front/src/index.css
+++ b/front/src/index.css
@@ -1,16 +1,13 @@
+@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-dynamic-subset.min.css');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@font-face {
-	font-family: 'Pretendard';
-	src: local('PretendardVariable'), url('./assets/PretendardVariable.woff2');
-}
-
 body {
 	font-family: 'Pretendard';
 	width: 600px;
-	height: 600px;
+	/* height: 600px; */
 	overflow: auto;
 }
 
@@ -24,6 +21,22 @@ html::-webkit-scrollbar {
 }
 
 * {
+	font-family:
+		'Pretendard Variable',
+		Pretendard,
+		-apple-system,
+		BlinkMacSystemFont,
+		system-ui,
+		Roboto,
+		'Helvetica Neue',
+		'Segoe UI',
+		'Apple SD Gothic Neo',
+		'Noto Sans KR',
+		'Malgun Gothic',
+		'Apple Color Emoji',
+		'Segoe UI Emoji',
+		'Segoe UI Symbol',
+		sans-serif;
 	box-sizing: border-box;
 	margin: 0;
 }
