--- a/front/src/index.css
+++ b/front/src/index.css
@@ -7,12 +7,11 @@
 body {
 	font-family: 'Pretendard';
 	width: 600px;
-	/* height: 600px; */
+	height: 600px;
 	overflow: auto;
 }
 
 html {
-	overflow-y: scroll; /* 세로 스크롤 활성화 */
 	scrollbar-width: none; /* Firefox에서 스크롤바 숨기기 */
 }
 
